--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,10 @@
 spring.mvc.view.prefix:/WEB-INF/jsp/
 spring.mvc.view.suffix:.jsp
+spring.datasource.platform=mysql
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/ecommerce?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=password
+spring.jpa.properties.hibernate.id.new_generator_mappings=false
