--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/ecommerce?create
 spring.datasource.username=root
 spring.datasource.password=password
 spring.jpa.properties.hibernate.id.new_generator_mappings=false
+
+DAO.INCORRECT_CREDENTIALS=Username or password is incorrect
