Added logging and exception handling using properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,8 @@ spring.datasource.username=root
 spring.datasource.password=password
 spring.jpa.properties.hibernate.id.new_generator_mappings=false
 
-DAO.INCORRECT_CREDENTIALS=Username or password is incorrect
+Service.INVALID_CREDENTIALS=Invalid credentials
+Service.USER_DOES_NOT_EXISTS=Account does not exist
+Service.USER_ALREADY_EXISTS=Account already exists
+
+Controller.REGISTRATION_SUCCESSFUL=Registration complete
