add logging messages to properties file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,5 +12,7 @@ spring.jpa.properties.hibernate.id.new_generator_mappings=false
 Service.INVALID_CREDENTIALS=Invalid credentials
 Service.USER_DOES_NOT_EXISTS=Account does not exist
 Service.USER_ALREADY_EXISTS=Account already exists
+Service.INVALID_CART_ID=Invalid Cart ID
 
 Controller.REGISTRATION_SUCCESSFUL=Registration complete
+Controller.ADDED_NEW_CART=Added new cart
