--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.url=jdbc:mysql://ecommerce.c49sqeeqgnzv.us-east-2.rds.amazonaw
 spring.datasource.username=root
 spring.datasource.password=password
 spring.jpa.properties.hibernate.id.new_generator_mappings=false
-spring.data.rest.basePath=/api
+spring.data.rest.basePath=/
 
 Service.INVALID_CREDENTIALS=Invalid credentials
 Service.USER_DOES_NOT_EXISTS=Account does not exist
