--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,7 @@ spring.datasource.username=root
 spring.datasource.password=password
 spring.jpa.properties.hibernate.id.new_generator_mappings=false
 spring.data.rest.basePath=/
+security.ignored=*.bundle.*
 
 Service.INVALID_CREDENTIALS=Invalid credentials
 Service.USER_DOES_NOT_EXISTS=Account does not exist
