--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://ecommerce.c49sqeeqgnzv.us-east-2.rds.amazonaws.com:3306/ecommerce?createDatabaseIfNotExist=true&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.password=PHbMAAWaOXUHlG1Wgtqs
 spring.jpa.properties.hibernate.id.new_generator_mappings=false
 spring.data.rest.basePath=/
 security.ignored=*.bundle.*
